--- a/src/i18n/messages.en.xlf
+++ b/src/i18n/messages.en.xlf
@@ -156,7 +156,7 @@
 </target>
 
       <context-group purpose="location"><context context-type="sourcefile">app/modules/heroes/pages/hero-detail-page/hero-detail-page.component.html</context><context context-type="linenumber">13</context></context-group></trans-unit><trans-unit id="@@appTitle" datatype="html">
-        <source>App title</source><target state="final">App title</target>
+        <source>Trendy Music</source><target state="final">Trendy Music POC</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.ts</context>
           <context context-type="linenumber">1</context>
