--- a/src/i18n/messages.xlf
+++ b/src/i18n/messages.xlf
@@ -170,7 +170,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="@@appTitle" datatype="html">
-        <source>App title</source>
+        <source>Trendy Music</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.ts</context>
           <context context-type="linenumber">1</context>
